tests/spec/fail/break_unknown_label.aja
for i in range(2):
    break nope
